<resources>
    <string name="app_name">KitchenSinkApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Appbase Search Widget</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="basic">Basic</string>
    <string name="without_search_icon">Without search icon</string>
    <string name="with_clear_icon">With clear icon</string>
    <string name="with_custom_search_icon">With custom search icon</string>
    <string name="with_custom_clear_icon">With custom clear icon</string>
    <string name="with_debounce">With debounce</string>
    <string name="with_fuzziness">With fuzziness as a number</string>
    <string name="with_auto_fuzziness">With auto fuzziness</string>
    <string name="with_voice_search">With voice search</string>
    <string name="without_highlight">Without highlight</string>
    <string name="round_search_bar">Round edged search bar</string>
    <string name="search_result_icon">With search result icon</string>
    <string name="redirect_icon">With insert suggestions icon</string>
    <string name="with_categories">With categories</string>
    <string name="max_suggestions_count">Max suggestions count</string>
    <string name="top_categories">With custom categories</string>
    <string name="default_suggestions">With default suggestions</string>
    <string name="default_weights">With field weights</string>
    <string name="with_custom_text_color">With custom text color</string>
    <string name="with_custom_placeholder_color">With custom placeholder color</string>
</resources>
