<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="External Attributes" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_basic"
                    android:title="@string/basic" />
                <item
                    android:id="@+id/nav_without_search"
                    android:title="@string/without_search_icon" />
                <item
                    android:id="@+id/nav_with_clear"
                    android:title="@string/with_clear_icon" />
                <item
                    android:id="@+id/nav_custom_search_icon"
                    android:title="@string/with_custom_search_icon" />
                <item
                    android:id="@+id/nav_custom_clear_icon"
                    android:title="@string/with_custom_clear_icon" />
                <item
                    android:id="@+id/nav_voice_search"
                    android:title="@string/with_voice_search" />
                <item
                    android:id="@+id/nav_round_search"
                    android:title="@string/round_search_bar" />
                <item
                    android:id="@+id/nav_max_suggestions_count"
                    android:title="@string/max_suggestions_count" />
            </group>
        </menu>
    </item>


    <item android:title="Search Props">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_debounce"
                    android:title="@string/with_debounce" />
                <item
                    android:id="@+id/nav_fuzziness"
                    android:title="@string/with_fuzziness" />
                <item
                    android:id="@+id/nav_auto_fuzziness"
                    android:title="@string/with_auto_fuzziness" />
                <item
                    android:id="@+id/nav_without_highlight"
                    android:title="@string/without_highlight" />
                <item
                    android:id="@+id/nav_search_result_icon"
                    android:title="@string/search_result_icon" />
                <item
                    android:id="@+id/nav_redirect_icon"
                    android:title="@string/redirect_icon" />
                <item
                    android:id="@+id/nav_categories"
                    android:title="@string/with_categories" />
            </group>
        </menu>
    </item>

</menu>
